force-app/main/default/objects/Contract/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <inlineHelpText>End Date from Strikedeck for Bulk Push</inlineHelpText>
    <label>Contract End Date(from SD)</label>
    <type>Date</type>
</CustomField>