force-app/main/default/objects/Contract/fields/Contract_Start_date_Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_date_Custom_Field__c</fullName>
    <formula>DATE (
      
    YEAR (  Contract_End_Date__c  ) - FLOOR(  ContractTerm   / 12) - IF (MONTH ( Contract_End_Date__c ) - MOD( ContractTerm , 12) &gt; 0, 0, 1),
 
    
    IF (MONTH ( Contract_End_Date__c ) - MOD ( ContractTerm , 12) &gt; 0, MONTH ( Contract_End_Date__c ) - MOD ( ContractTerm , 12), MONTH ( Contract_End_Date__c ) - MOD ( ContractTerm , 12) + 12),
 
     
    MIN (DAY ( Contract_End_Date__c ), 
        CASE (
   
       
   IF (MONTH ( Contract_End_Date__c ) - MOD ( ContractTerm , 12) &gt; 0, MONTH ( Contract_End_Date__c ) - MOD ( ContractTerm , 12), MONTH ( Contract_End_Date__c ) - MOD ( ContractTerm , 12) + 12), 9, 30, 4, 30, 6, 30, 11, 30, 2, 
   
    
   IF (MOD (YEAR ( Contract_End_Date__c ) - FLOOR( ContractTerm / 12) - IF (MONTH ( Contract_End_Date__c ) - MOD( ContractTerm , 12) &gt; 0, 0, 1), 400) = 0 || (MOD (YEAR ( Contract_End_Date__c ) - FLOOR( ContractTerm / 12) - IF (MONTH ( Contract_End_Date__c ) - MOD( ContractTerm , 12) &gt; 0, 0, 1) ,4) = 0 &amp;&amp; MOD (YEAR ( Contract_End_Date__c ) - FLOOR( ContractTerm / 12) - IF (MONTH ( Contract_End_Date__c ) - MOD( ContractTerm , 12) &gt; 0, 0, 1) ,100) &lt;&gt; 0 ), 29, 28), 31)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Start date(Custom Field)</label>
    <type>Date</type>
</CustomField>