force-app/main/default/objects/Contract/fields/Number_of_Seats_Vault__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Seats_Vault__c</fullName>
    <label># of Seats Vault (from SD)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>