force-app/main/default/objects/Contract/fields/of_Seats_CI_CD__c.field-meta.xml
<CustomField>
    <fullName>of_Seats_CI_CD__c</fullName>
    <label># of Seats CI/CD (from SD)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>