force-app/main/default/objects/Contract/fields/Total_AR_Subs_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Total_AR_Subs_Closed_Won__c</fullName>
    <label>Total # of AR Subs Closed Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>