force-app/main/default/objects/Contract/listViews/AllContracts.listView-meta.xml
<ListView>
    <fullName>AllContracts</fullName>
    <columns>CONTRACT.CREATED_DATE</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>Account_ID__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Contract_Start_date_Custom_Field__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>CONTRACT_TERM</columns>
    <columns>Opportunity__c</columns>
    <columns>Total_AR_Subs_Closed_Won__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contracts</label>
    <language>en_US</language>
</ListView>